--- a/server/.env.exemple
+++ b/server/.env.exemple
@@ -1,5 +1,5 @@
 # Django development config
-DEVELOPMENT_MODE= #'True' - postgres DB 'False" - SQLlite
+DEVELOPMENT_MODE='False' #'False' - postgres DB 'True' - SQLlite, отключите postgres container
 DJANGO_DEBUG=True
 
 DJANGO_SECRET_KEY="key"
