--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -1,52 +1,27 @@
-
-upstream frontend_server {
-    server client:8080;
-}
-
-upstream backend_server {
-    server server:8008;
-}
-
 server {
     listen 80;
-    server_name release.latikdesu.art;
-
-    return 301 release.latikdesu.art$request_uri;
-
-}
-
-server {
-    listen 443 ssl;
-    server_name release.latikdesu.art;
-
-    ssl_certificate /etc/nginx/ssl/release_latikdesu_art.crt;
-    ssl_certificate_key /etc/nginx/ssl/release_latikdesu_art.key;
-
-    root  /usr/share/nginx/html;
-    include /etc/nginx/mime.types;
-
+    server_name 192.168.31.172;
     server_tokens off;
 
+    client_max_body_size 20M;
 
     location / {
-        proxy_pass http://frontend_server;
+        try_files $uri @proxy_api;
+    }
+
+    location /admin {
+        try_files $uri @proxy_api;
+    }
+
+    location @proxy_api {
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
+        proxy_pass http://localhost:8000;
     }
 
     location /static/ {
         autoindex on;
-        alias /app/server/static/;
+        alias /app/server/static;
     }
-
-    location /api {
-        proxy_pass http://backend_server;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
-
-        proxy_connect_timeout       70s;
-        proxy_send_timeout          86400;
-        proxy_read_timeout          86400;
-        send_timeout                86400;
-    }
-
+        
 }
