--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -17,6 +17,7 @@ packaging==23.2
 psycopg2-binary==2.9.9
 python-dotenv==1.0.0
 pytz==2023.3.post1
+ruff==0.1.2
 PyYAML==6.0.1
 referencing==0.30.2
 requests==2.31.0
